--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,11 @@
         "module": "commonjs",
         "esModuleInterop": true,
         "outDir": "dist",
-        "sourceMap": true
+        "sourceMap": true,
+        "lib": ["ESNext"],
+        "types": ["reflect-metadata"],
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true
     },
     "include": [
         "src/**/*.ts"
