--- a/package.json
+++ b/package.json
@@ -12,15 +12,22 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "inversify": "^6.0.1",
+    "inversify-express-utils": "^6.4.3",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.7.0",
+    "redis": "^4.1.1",
     "reflect-metadata": "^0.1.13",
     "validate": "^5.2.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.26",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
