--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^4.7.0",
     "redis": "^4.1.1",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.5.1",
     "validate": "^5.2.0"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.26",
+    "@types/socket.io": "^3.0.2",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
